test/semantic_errors/invalid_assignment5.mc
void main() {
    bool b;
    int i;
    b = i; /* cannot assign bool to int */
}